// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests rendering MissingPalletWorklistCard Renders the MissingPalletWorklistCard 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "borderColor": "#dbecff",
      "borderWidth": 1,
      "opacity": 1,
      "padding": 10,
    }
  }
  testID="missingPalletWorklistCard"
>
  <View>
    <Text
      style={
        Object {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.MISSING_PALLET_WORKLIST.MISSING_PALLET_LABEL" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.PALLET_ID" translation]: 7988
      </Text>
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_DATE" translation]: 26/06/2022
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.LAST_LOCATION" translation]: A1-1
      </Text>
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_BY" translation]: vn51wu8
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tests rendering MissingPalletWorklistCard Renders the MissingPalletWorklistCard with expanded prop as true 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "borderColor": "#dbecff",
      "borderWidth": 1,
      "opacity": 1,
      "padding": 10,
    }
  }
  testID="missingPalletWorklistCard"
>
  <View>
    <Text
      style={
        Object {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.MISSING_PALLET_WORKLIST.MISSING_PALLET_LABEL" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.PALLET_ID" translation]: 7989
      </Text>
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_DATE" translation]: 26/06/2022
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.LAST_LOCATION" translation]: A1-3
      </Text>
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_BY" translation]: vn51wu8
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
        }
      }
    >
      <Icon
        color="#000000"
        name="navigate-next"
        size={45}
        testID="navigate-next-icon"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-between",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          Object {
            "flex": 1,
            "fontSize": 12,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0071e9",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="addLocationButton"
        >
          <Text
            style={
              Object {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
              }
            }
          >
            [missing "en.MISSING_PALLET_WORKLIST.ADD_LOCATION" translation]
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          Object {
            "flex": 1,
            "fontSize": 12,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#D6512D",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="deletePalletButton"
        >
          <Text
            style={
              Object {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
              }
            }
          >
            [missing "en.MISSING_PALLET_WORKLIST.DELETE_PALLET" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
